data/all_generated_tests/raw_wast_tests/br_StackCorruption_251.wast
;; 2. **Test 2: Loop Resumption with Operand Consumption**    - A loop containing a `br` instruction that jumps back to the beginning of the loop with multiple operands being consumed and then replaced on the stack.    - Constraint: Verify correct handling of operand stack unwinding and re-placing operands when branching to the start of a loop.    - Stack Corruption Check: Ensure stack content is correctly maintained when performing backward branches.

(assert_invalid
  (module
    (func $loop-resume-with-operands
      (loop $L
        (i32.const 1)
        (i32.const 2)
        (br $L)
        (drop)
        (drop)
      )
    )
  )
  "type mismatch"
)